Adds CurrencyRate entity, migrations, console command to fetch rates.

--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -29,3 +29,5 @@ parameters:
 
     google_client_id: %google.client.id%
     google_client_secret: %google.client.secret%
+
+    base_currency: %app.base.currency%
