--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1,9 +1,16 @@
 # Learn more about services, parameters and containers at
-# https://symfony.com/doc/current/service_container.html
+# http://symfony.com/doc/current/book/service_container.html
 parameters:
-    #parameter_name: value
+#    parameter_name: value
 
 services:
-    #service_name:
-    #    class: AppBundle\Directory\ClassName
-    #    arguments: ['@another_service_name', 'plain_value', '%parameter_name%']
+#    service_name:
+#        class: AppBundle\Directory\ClassName
+#        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+    app.exception_listener:
+        class: CurrencyRates\Listener\ExceptionListener
+        arguments:
+            - @translator
+            - @monolog.logger
+        tags:
+            - { name: kernel.event_listener, event: kernel.exception }
