--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -39,6 +39,7 @@ services:
             - @lexik_jwt_authentication.jwt_manager
             - @event_dispatcher
             - @app_refresh_token_manager
+            - @templating
 
     app_jwt_decoded_listener:
         class: CurrencyRates\Service\JWT\DecodedListener
